<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/showview_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99F4F4F4">

    <RelativeLayout
        android:id="@+id/dialog_re"
        android:layout_centerInParent="true"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:background="@color/white_overlay">

        <RelativeLayout
            android:id="@+id/title_re"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/exit_room"
                android:textColor="#212324" />

            <ImageView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@mipmap/ic_close" />

        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/show_replay"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_re">


            <ImageView
                android:id="@+id/img_replay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/img_replay" />
            <TextView
                android:layout_below="@+id/img_replay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/jump_to_replay"
                android:textSize="10sp"
                />

        </RelativeLayout>


        <Button
            android:id="@+id/btn_exit"
            android:layout_width="184dp"
            android:layout_height="40dp"
            android:layout_below="@+id/show_replay"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_select_exit"
            android:text="@string/exit_this_room"
            android:textColor="#7A7B7C" />

    </RelativeLayout>


</RelativeLayout>
