<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SelectActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/select_title_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/select_titile_magin_top"
                android:src="@mipmap/ic_logo" />

            <TextView
                android:id="@+id/select_tittle_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/select_title_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:text="@string/title_welecome" />

            <RelativeLayout
                android:id="@+id/center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="47.5dp">

                <RelativeLayout
                    android:id="@+id/select_join"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/select_join_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/ic_select_join" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/select_join_img"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:text="@string/select_join"
                        android:textColor="#FF212324" />
                </RelativeLayout>

                <View
                    android:id="@+id/line"
                    android:layout_width="0.5dp"
                    android:layout_height="65dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="26.5dp"
                    android:layout_toRightOf="@+id/select_join"
                    android:background="#FFE7E7E7" />

                <RelativeLayout
                    android:id="@+id/select_create"
                    android:layout_marginLeft="26.5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/line">

                    <ImageView
                        android:id="@+id/select_create_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/ic_select_create" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/select_create_img"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:text="@string/select_create"
                        android:textColor="#FF212324" />
                </RelativeLayout>
            </RelativeLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="102.5dp"
                android:layout_marginBottom="25dp"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_text_open_source_permissions"
                    android:textColor="#212324" />

                <TextView
                    android:id="@+id/select_text_open_source"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_text_open_source_permissions_info"
                    android:textColor="#FF106BC5" />
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>